[metadata]
name = moonlapse-shared
version = 0.0.1
author = Moonlapse Developers
author_email = dev@moonlapse.net
description = Shared package between Moonlapse client and server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/moonlapse-mud/shared
project_urls =
    Bug Tracker = https://github.com/moonlapse-mud/shared/issues
    Main Site = https://moonlapse.net
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src